ui(prompts): melhoria tela de prompts
